--- a/USMortalityDataAnalysis/USMortalityDataAnalysis.fsproj
+++ b/USMortalityDataAnalysis/USMortalityDataAnalysis.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Parsing.fs" />
+    <Compile Include="Stats.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
