--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -56,6 +56,7 @@
     <Content Include="packages.config" />
     <Compile Include="SumOfMultiplesTests.fs" />
     <Compile Include="DifferenceOfSquaresTests.fs" />
+    <Compile Include="BobTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
