[ExercismFSharp] Add SpaceAge solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="SumOfMultiplesTests.fs" />
     <Compile Include="DifferenceOfSquaresTests.fs" />
     <Compile Include="BobTests.fs" />
+    <Compile Include="SpaceAgeTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
