--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -49,6 +49,7 @@
     <Compile Include="SumOfMultiples.fs" />
     <Compile Include="DifferenceOfSquares.fs" />
     <Compile Include="Bob.fs" />
+    <Compile Include="SpaceAge.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
