--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -50,6 +50,8 @@
     <Compile Include="DifferenceOfSquares.fs" />
     <Compile Include="Bob.fs" />
     <Compile Include="SpaceAge.fs" />
+    <Compile Include="Gigasecond.fs" />
+    <Compile Include="Triangle.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
