--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -52,6 +52,7 @@
     <Compile Include="SpaceAge.fs" />
     <Compile Include="Gigasecond.fs" />
     <Compile Include="Triangle.fs" />
+    <Compile Include="BeerSong.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
