--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -53,6 +53,7 @@
     <Compile Include="Gigasecond.fs" />
     <Compile Include="Triangle.fs" />
     <Compile Include="BeerSong.fs" />
+    <Compile Include="RobotName.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
