--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -62,6 +62,7 @@
     <Compile Include="TriangleTests.fs" />
     <Compile Include="BeerSongTests.fs" />
     <Compile Include="RobotNameTests.fs" />
+    <Compile Include="GrainsTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
