[ExercismFSharp] Add LeapYear solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="BeerSongTests.fs" />
     <Compile Include="RobotNameTests.fs" />
     <Compile Include="GrainsTests.fs" />
+    <Compile Include="LeapYearTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
