--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -55,6 +55,7 @@
     <Compile Include="BeerSong.fs" />
     <Compile Include="RobotName.fs" />
     <Compile Include="Grains.fs" />
+    <Compile Include="LeapYear.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
