[ExercismFSharp] Add Hamming solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="RobotNameTests.fs" />
     <Compile Include="GrainsTests.fs" />
     <Compile Include="LeapYearTests.fs" />
+    <Compile Include="HammingTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
