[ExercismFSharp] Add ETL solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -65,6 +65,7 @@
     <Compile Include="GrainsTests.fs" />
     <Compile Include="LeapYearTests.fs" />
     <Compile Include="HammingTests.fs" />
+    <Compile Include="ETLTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
