--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="Grains.fs" />
     <Compile Include="LeapYear.fs" />
     <Compile Include="Hamming.fs" />
+    <Compile Include="ETL.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
