[ExercismFSharp] Add WordCount solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="LeapYearTests.fs" />
     <Compile Include="HammingTests.fs" />
     <Compile Include="ETLTests.fs" />
+    <Compile Include="WordCountTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
