--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -34,32 +34,6 @@
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\ExercismFSharp.XML</DocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="HelloWorld.fs" />
-    <Compile Include="SumOfMultiples.fs" />
-    <Compile Include="DifferenceOfSquares.fs" />
-    <Compile Include="Bob.fs" />
-    <Compile Include="SpaceAge.fs" />
-    <Compile Include="Gigasecond.fs" />
-    <Compile Include="Triangle.fs" />
-    <Compile Include="BeerSong.fs" />
-    <Compile Include="RobotName.fs" />
-    <Compile Include="Grains.fs" />
-    <Compile Include="LeapYear.fs" />
-    <Compile Include="Hamming.fs" />
-    <Compile Include="ETL.fs" />
-    <Compile Include="WordCount.fs" />
-  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -76,6 +50,34 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
+  <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
+    <Content Include="SkippedExercises.txt" />
+    <Compile Include="HelloWorld.fs" />
+    <Compile Include="SumOfMultiples.fs" />
+    <Compile Include="DifferenceOfSquares.fs" />
+    <Compile Include="Bob.fs" />
+    <Compile Include="SpaceAge.fs" />
+    <Compile Include="Gigasecond.fs" />
+    <Compile Include="Triangle.fs" />
+    <Compile Include="BeerSong.fs" />
+    <Compile Include="RobotName.fs" />
+    <Compile Include="Grains.fs" />
+    <Compile Include="LeapYear.fs" />
+    <Compile Include="Hamming.fs" />
+    <Compile Include="ETL.fs" />
+    <Compile Include="WordCount.fs" />
+    <Compile Include="RomanNumeral.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
