[ExercismFSharp] Add RNATranscription solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="ETLTests.fs" />
     <Compile Include="WordCountTests.fs" />
     <Compile Include="RomanNumeralTests.fs" />
+    <Compile Include="RnaTranscriptionTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
