[ExercismFSharp] Add Atbash solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -72,6 +72,7 @@
     <Compile Include="AllergiesTests.fs" />
     <Compile Include="AnagramTests.fs" />
     <Compile Include="PangramTest.fs" />
+    <Compile Include="AtbashTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
