[ExercismFSharp] Add NucleoTide solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -75,6 +75,7 @@
     <Compile Include="AtbashTests.fs" />
     <Compile Include="RaindropsTests.fs" />
     <Compile Include="ProverbTest.fs" />
+    <Compile Include="NucleoTideCountTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
