--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -76,6 +76,7 @@
     <Compile Include="Raindrops.fs" />
     <Compile Include="Proverb.fs" />
     <Compile Include="NucleoTideCount.fs" />
+    <Compile Include="TwelveDaysSong.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
