[ExercismFSharp] Add NthPrime solution

--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -77,6 +77,7 @@
     <Compile Include="Proverb.fs" />
     <Compile Include="NucleoTideCount.fs" />
     <Compile Include="TwelveDaysSong.fs" />
+    <Compile Include="NthPrime.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
