--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -77,6 +77,7 @@
     <Compile Include="ProverbTest.fs" />
     <Compile Include="NucleoTideCountTests.fs" />
     <Compile Include="TwelveDaysSongTests.fs" />
+    <Compile Include="NthPrimeTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
