[ExercismFSharp] Add Palindrome solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -78,6 +78,7 @@
     <Compile Include="NucleoTideCountTests.fs" />
     <Compile Include="TwelveDaysSongTests.fs" />
     <Compile Include="NthPrimeTests.fs" />
+    <Compile Include="PalindromeTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
