--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -69,6 +69,7 @@
     <Compile Include="Palindrome.fs" />
     <Compile Include="Pangram.fs" />
     <Compile Include="Proverb.fs" />
+    <Compile Include="QueenAttack.fs" />
     <Compile Include="Raindrops.fs" />
     <Compile Include="RnaTranscription.fs" />
     <Compile Include="RobotName.fs" />
