[ExercismFSharp] Add Isogram solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="GrainsTests.fs" />
     <Compile Include="HammingTests.fs" />
     <Compile Include="HelloWorldTests.fs" />
+    <Compile Include="IsogramTests.fs" />
     <Compile Include="LeapYearTests.fs" />
     <Compile Include="NthPrimeTests.fs" />
     <Compile Include="NucleoTideCountTests.fs" />
