[ExercismFSharp] Add PerfectNumbers solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -70,6 +70,7 @@
     <Compile Include="NucleoTideCountTests.fs" />
     <Compile Include="PalindromeTests.fs" />
     <Compile Include="PangramTest.fs" />
+    <Compile Include="PerfectNumbersTests.fs" />
     <Compile Include="PhoneNumberTests.fs" />
     <Compile Include="ProverbTest.fs" />
     <Compile Include="QueenAttackTests.fs" />
