--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -76,6 +76,7 @@
     <Compile Include="RobotName.fs" />
     <Compile Include="RomanNumeral.fs" />
     <Compile Include="Say.fs" />
+    <Compile Include="Series.fs" />
     <Compile Include="SpaceAge.fs" />
     <Compile Include="SumOfMultiples.fs" />
     <Compile Include="Triangle.fs" />
