[ExercismFSharp] Add Ledger solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -58,34 +58,35 @@
     <Compile Include="AtbashTest.fs" />
     <Compile Include="BeerSongTest.fs" />
     <Compile Include="BobTest.fs" />
-    <Compile Include="DifferenceOfSquaresTests.fs" />
-    <Compile Include="ETLTests.fs" />
-    <Compile Include="GigasecondTests.fs" />
-    <Compile Include="GrainsTests.fs" />
-    <Compile Include="HammingTests.fs" />
-    <Compile Include="HelloWorldTests.fs" />
-    <Compile Include="IsogramTests.fs" />
-    <Compile Include="LeapYearTests.fs" />
-    <Compile Include="NthPrimeTests.fs" />
-    <Compile Include="NucleoTideCountTests.fs" />
-    <Compile Include="PalindromeTests.fs" />
+    <Compile Include="DifferenceOfSquaresTest.fs" />
+    <Compile Include="ETLTest.fs" />
+    <Compile Include="GigasecondTest.fs" />
+    <Compile Include="GrainsTest.fs" />
+    <Compile Include="HammingTest.fs" />
+    <Compile Include="HelloWorldTest.fs" />
+    <Compile Include="IsogramTest.fs" />
+    <Compile Include="LeapYearTest.fs" />
+    <Compile Include="LedgerTest.fs" />
+    <Compile Include="NthPrimeTest.fs" />
+    <Compile Include="NucleoTideCountTest.fs" />
+    <Compile Include="PalindromeTest.fs" />
     <Compile Include="PangramTest.fs" />
-    <Compile Include="PerfectNumbersTests.fs" />
-    <Compile Include="PhoneNumberTests.fs" />
+    <Compile Include="PerfectNumbersTest.fs" />
+    <Compile Include="PhoneNumberTest.fs" />
     <Compile Include="ProverbTest.fs" />
-    <Compile Include="PythagoreanTripletTests.fs" />
-    <Compile Include="QueenAttackTests.fs" />
-    <Compile Include="RaindropsTests.fs" />
-    <Compile Include="RnaTranscriptionTests.fs" />
-    <Compile Include="RobotNameTests.fs" />
-    <Compile Include="RomanNumeralTests.fs" />
-    <Compile Include="SayTests.fs" />
-    <Compile Include="SeriesTests.fs" />
-    <Compile Include="SpaceAgeTests.fs" />
-    <Compile Include="SumOfMultiplesTests.fs" />
-    <Compile Include="TriangleTests.fs" />
-    <Compile Include="TwelveDaysSongTests.fs" />
-    <Compile Include="WordCountTests.fs" />
+    <Compile Include="PythagoreanTripletTest.fs" />
+    <Compile Include="QueenAttackTest.fs" />
+    <Compile Include="RaindropsTest.fs" />
+    <Compile Include="RnaTranscriptionTest.fs" />
+    <Compile Include="RobotNameTest.fs" />
+    <Compile Include="RomanNumeralTest.fs" />
+    <Compile Include="SayTest.fs" />
+    <Compile Include="SeriesTest.fs" />
+    <Compile Include="SpaceAgeTest.fs" />
+    <Compile Include="SumOfMultiplesTest.fs" />
+    <Compile Include="TriangleTest.fs" />
+    <Compile Include="TwelveDaysSongTest.fs" />
+    <Compile Include="WordCountTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
