--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="Hamming.fs" />
     <Compile Include="HelloWorld.fs" />
     <Compile Include="LeapYear.fs" />
+    <Compile Include="Ledger.fs" />
     <Compile Include="NthPrime.fs" />
     <Compile Include="NucleoTideCount.fs" />
     <Compile Include="Palindrome.fs" />
