--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -67,6 +67,7 @@
     <Compile Include="IsogramTest.fs" />
     <Compile Include="LeapYearTest.fs" />
     <Compile Include="LedgerTest.fs" />
+    <Compile Include="MinesweeperTest.fs" />
     <Compile Include="NthPrimeTest.fs" />
     <Compile Include="NucleoTideCountTest.fs" />
     <Compile Include="PalindromeTest.fs" />
