[ExercismFSharp] Add Matrix solution

--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -67,6 +67,7 @@
     <Compile Include="Isogram.fs" />
     <Compile Include="LeapYear.fs" />
     <Compile Include="Ledger.fs" />
+    <Compile Include="Matrix.fs" />
     <Compile Include="Minesweeper.fs" />
     <Compile Include="NthPrime.fs" />
     <Compile Include="NucleoTideCount.fs" />
