--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="IsogramTest.fs" />
     <Compile Include="LeapYearTest.fs" />
     <Compile Include="LedgerTest.fs" />
+    <Compile Include="MatrixTest.fs" />
     <Compile Include="MinesweeperTest.fs" />
     <Compile Include="NthPrimeTest.fs" />
     <Compile Include="NucleoTideCountTest.fs" />
