--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -65,6 +65,7 @@
     <Compile Include="GrainsTest.fs" />
     <Compile Include="HammingTest.fs" />
     <Compile Include="HelloWorldTest.fs" />
+    <Compile Include="HouseTest.fs" />
     <Compile Include="IsogramTest.fs" />
     <Compile Include="LeapYearTest.fs" />
     <Compile Include="LedgerTest.fs" />
