--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="Isogram.fs" />
     <Compile Include="LeapYear.fs" />
     <Compile Include="Ledger.fs" />
+    <Compile Include="Luhn.fs" />
     <Compile Include="Matrix.fs" />
     <Compile Include="Minesweeper.fs" />
     <Compile Include="NthPrime.fs" />
