--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -58,6 +58,7 @@
     <Compile Include="Atbash.fs" />
     <Compile Include="BeerSong.fs" />
     <Compile Include="Bob.fs" />
+    <Compile Include="CryptoSquare.fs" />
     <Compile Include="DifferenceOfSquares.fs" />
     <Compile Include="DiffieHellman.fs" />
     <Compile Include="ETL.fs" />
