--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -56,6 +56,7 @@
     <Compile Include="Allergies.fs" />
     <Compile Include="Anagram.fs" />
     <Compile Include="Atbash.fs" />
+    <Compile Include="BankAccount.fs" />
     <Compile Include="BeerSong.fs" />
     <Compile Include="Bob.fs" />
     <Compile Include="CryptoSquare.fs" />
