--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="DiffieHellmanTest.fs" />
     <Compile Include="ETLTest.fs" />
     <Compile Include="GigasecondTest.fs" />
+    <Compile Include="GradeSchoolTest.fs" />
     <Compile Include="GrainsTest.fs" />
     <Compile Include="HammingTest.fs" />
     <Compile Include="HelloWorldTest.fs" />
