--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -61,6 +61,7 @@
     <Compile Include="BankAccountTest.fs" />
     <Compile Include="BeerSongTest.fs" />
     <Compile Include="BobTest.fs" />
+    <Compile Include="ClockTests.fs" />
     <Compile Include="CryptoSquareTest.fs" />
     <Compile Include="DifferenceOfSquaresTest.fs" />
     <Compile Include="DiffieHellmanTest.fs" />
